# perfnetto

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/perfnetto/: __init__.py  _perfnetto.pyx  perfetto_wrapper.cc
tests/: test_perfnetto.py
